Added new Bundeslaender lookup-table for population (31.12.2020), added and modified README's in data folders, added (daily) hospitalization nowcast script (work-in-progress), updated weekday-correction-reproduction-number script

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,13 @@
 data/NPGEO/*
 data/RKI/*
 data/SurvStat/*
-!data/NPGEO/README.*
-!data/RKI/README.*
-!data/SurvStat/README.*
+!data/RKI/Hospitalisierungen
+!data/RKI/Nowcasting
+data/RKI/Hospitalisierungen/*
+data/RKI/Nowcasting/*
+!data/NPGEO/**/README.*
+!data/RKI/**/README.*
+!data/SurvStat/**/README.*
 src/_TODO/
 
 # Output is not part of the repository
